<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <Button
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:id="@+id/btnMusic"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:text="@string/listen_to_music"
        android:textColor="@android:color/holo_red_light"
        android:background="@android:color/holo_blue_light"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <Button
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:id="@+id/btnMemes"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/btnMusic"
        android:layout_centerHorizontal="true"
        android:text="@string/see_memes"
        android:textColor="@android:color/holo_red_light"
        android:background="@android:color/holo_blue_light"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <Button
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:id="@+id/btnUpdatePreferences"
        android:layout_below="@+id/btnMemes"
        android:layout_marginTop="40dp"
        android:text="@string/update_preferences"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@android:color/holo_red_light"
        android:background="@android:color/holo_blue_light"
        />

</RelativeLayout>